CONTROL: Tabbed form component added, slider component started, button directive modified

--- a/projects/control/src/app/applications/application-list/components/application-list/application-list.component.html
+++ b/projects/control/src/app/applications/application-list/components/application-list/application-list.component.html
@@ -1,37 +1,180 @@
 <div class="container-fluid p-4">
+  <div class="row mb-5">
+    <div class="col-auto">
+      <div class="row">
+        <div class="col-auto">
+          <button kol-button size="small" [icon]="'fa-cloud-upload-alt'" [upload]="true">Тестовая мини кнопка</button>
+        </div>
+        <div class="col-auto">
+          <button kol-button size="small" type="stroked" [icon]="'fa-cloud-upload-alt'" [upload]="true">Тестовая мини кнопка</button>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-auto">
+          <button kol-button size="small" [icon]="'fa-cloud-upload-alt'" [progress]="66">Тестовая мини кнопка</button>
+        </div>
+        <div class="col-auto">
+          <button kol-button size="small" type="stroked" [icon]="'fa-cloud-upload-alt'" [progress]="66">Тестовая мини кнопка</button>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-auto">
+          <button kol-button size="small" [icon]="'fa-cloud-upload-alt'" disabled>Тестовая мини кнопка</button>
+        </div>
+        <div class="col-auto">
+          <button kol-button size="small" type="stroked" [icon]="'fa-cloud-upload-alt'" disabled>Тестовая мини кнопка</button>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-auto">
+          <button kol-button size="small" [icon]="'fa-cloud-upload-alt'" [loading]="true">Тестовая мини кнопка</button>
+        </div>
+        <div class="col-auto">
+          <button kol-button size="small" type="stroked" [icon]="'fa-cloud-upload-alt'" [loading]="true">Тестовая мини кнопка</button>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-auto">
+          <button kol-button size="small" [icon]="'fa-cloud-upload-alt'" [loading]="true" [progress]="66">Тестовая мини кнопка</button>
+        </div>
+        <div class="col-auto">
+          <button kol-button size="small" type="stroked" [icon]="'fa-cloud-upload-alt'" [loading]="true" [progress]="66">Тестовая мини кнопка</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="row mb-5">
+        <div class="col-auto">
+          <div class="row">
+            <div class="col-auto">
+              <button kol-button icon="fa-cloud-upload-alt" [upload]="true">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button type="stroked" icon="fa-cloud-upload-alt" [upload]="true">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button icon="fa-cloud-upload-alt" [progress]="66">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button type="stroked" icon="fa-cloud-upload-alt" [progress]="66">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button icon="fa-cloud-upload-alt" disabled>Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button type="stroked" icon="fa-cloud-upload-alt" disabled>Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button icon="fa-cloud-upload-alt" [loading]="true">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button type="stroked" icon="fa-cloud-upload-alt" [loading]="true">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button icon="fa-cloud-upload-alt" [loading]="true" [progress]="66">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button type="stroked" icon="fa-cloud-upload-alt" [loading]="true" [progress]="66">Тестовая кнопка</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="row mb-5">
+        <div class="col-auto">
+          <div class="row">
+            <div class="col-auto">
+              <button kol-button size="big" icon="fa-cloud-upload-alt" [upload]="true">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button size="big" type="stroked" icon="fa-cloud-upload-alt" [upload]="true">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button size="big" icon="fa-cloud-upload-alt" [progress]="66">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button size="big" type="stroked" icon="fa-cloud-upload-alt" [progress]="66">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button size="big" icon="fa-cloud-upload-alt" disabled>Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button size="big" type="stroked" icon="fa-cloud-upload-alt" disabled>Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button size="big" icon="fa-cloud-upload-alt" [loading]="true">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button size="big" type="stroked" icon="fa-cloud-upload-alt" [loading]="true">Тестовая кнопка</button>
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-auto">
+              <button kol-button size="big" icon="fa-cloud-upload-alt" [loading]="true" [progress]="66">Тестовая кнопка</button>
+            </div>
+            <div class="col-auto">
+              <button kol-button size="big" type="stroked" icon="fa-cloud-upload-alt" [loading]="true" [progress]="66">Тестовая кнопка</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row">
-    <div class="col-auto">
-      <button kol-button-solid size="small" [icon]="'fa-cloud-upload-alt'" [upload]="true">Кнопка выбора файла</button>
+    <div class="col-6 h-50">
+      <kol-tabbed-form [caption]="'Тестовая форма с тремя вкладками'"
+                       [controlText]="'Отправить форму'"
+                       [controlIcon]="'fa-address-book'"
+                       [controlDisabled]="true"
+                       [controlLoading]="true">
+        <kol-form-tab [caption]="'Тестовая вкладка'"
+                      [description]="'Описание тестовой вкладки'"
+                      [icon]="'fa-image'">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, consectetur, cupiditate exercitationem fugit
+          hic in ipsam iusto maiores, minima porro quibusdam quisquam rem repellat similique sit sunt tempore voluptatem
+          voluptatibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam assumenda ipsa rem
+          reprehenderit. Beatae in, placeat? Cum eligendi est harum incidunt ipsum iure, molestiae nobis quos tempore
+          vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci at cupiditate delectus ex
+          expedita, explicabo facilis fuga iure magnam, nobis officia quibusdam quisquam sapiente sequi tempore
+          temporibus tenetur voluptate? Quia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur
+          distinctio ducimus laboriosam, magni numquam quo quos. Assumenda cupiditate eius hic iste vero voluptatibus!
+          Dolore ea et excepturi id minima. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi praesentium
+          rem vitae! At, dolorum et illo libero minus natus quos? Blanditiis esse harum quasi ullam. Fugiat impedit incidunt
+          natus nulla! Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis consectetur deserunt dignissimos
+          dolores doloribus, ea fugiat incidunt itaque labore minus nihil nostrum odio placeat, quaerat qui quo, repudiandae unde.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto consequatur consequuntur, cumque dolor ea
+          est facilis ipsum iste labore libero molestiae possimus, provident quae quasi quidem repudiandae sed tenetur.
+        </kol-form-tab>
+        <kol-form-tab [caption]="'Вторая вкладка'"
+                      [icon]="'fa-address-book'">
+          second tab content
+        </kol-form-tab>
+        <kol-form-tab [caption]="'Третья вкладка'"
+                      [description]="'Описание вкладки'"
+                      [icon]="'fa-eye'">
+          third tab content
+        </kol-form-tab>
+      </kol-tabbed-form>
     </div>
-    <div class="col-auto">
-      <button kol-button-solid size="small" [icon]="'fa-cloud-upload-alt'" [loading]="true" [progress]="66">Кнопка выбора файла</button>
-    </div>
-    <div class="col-auto">
-      <button kol-button-solid size="small" [icon]="'fa-cloud-upload-alt'" [upload]="true"></button>
-    </div>
-  </div>
-
-  <div class="row mt-4">
-    <div class="col-auto">
-      <button kol-button-solid [icon]="'fa-bell'">Кнопка стандартного размера</button>
-    </div>
-    <div class="col-auto">
-      <button kol-button-solid [icon]="'fa-bell'" [disabled]="true" [loading]="true" [progress]="66">Кнопка стандартного размера</button>
-    </div>
-    <div class="col-auto">
-      <button kol-button-solid [icon]="'fa-bell'"></button>
-    </div>
-  </div>
-
-  <div class="row mt-4">
-    <div class="col-auto">
-      <button kol-button-solid size="big" [icon]="'fa-cloud-upload-alt'" [upload]="true">Кнопка выбора файла</button>
-    </div>
-    <div class="col-auto">
-      <button kol-button-solid size="big" [icon]="'fa-cloud-upload-alt'" [upload]="true" [loading]="true" [progress]="66">Кнопка выбора файла</button>
-    </div>
-    <div class="col-auto">
-      <button kol-button-solid size="big" [icon]="'fa-cloud-upload-alt'" [upload]="true"></button>
+    <div class="col-6">
+      <kol-slider>
+        <kol-slide [url]="'http://galereyashtor.ru/wp-content/uploads/2012/01/DSC00310.jpg'"></kol-slide>
+      </kol-slider>
     </div>
   </div>
 </div>
