CONTROL: Slider modified

--- a/projects/control/src/app/applications/application-list/components/application-list/application-list.component.html
+++ b/projects/control/src/app/applications/application-list/components/application-list/application-list.component.html
@@ -143,7 +143,7 @@
                        [controlDisabled]="true"
                        [controlLoading]="true">
         <kol-form-tab [caption]="'Тестовая вкладка'"
-                      [description]="'Описание тестовой вкладки'"
+                      [description]="'Описание первой вкладки'"
                       [icon]="'fa-image'">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, consectetur, cupiditate exercitationem fugit
           hic in ipsam iusto maiores, minima porro quibusdam quisquam rem repellat similique sit sunt tempore voluptatem
@@ -161,11 +161,12 @@
           est facilis ipsum iste labore libero molestiae possimus, provident quae quasi quidem repudiandae sed tenetur.
         </kol-form-tab>
         <kol-form-tab [caption]="'Вторая вкладка'"
+                      [description]="'Описание второй вкладки'"
                       [icon]="'fa-address-book'">
           second tab content
         </kol-form-tab>
         <kol-form-tab [caption]="'Третья вкладка'"
-                      [description]="'Описание вкладки'"
+                      [description]="'Описание третьей вкладки'"
                       [icon]="'fa-eye'">
           third tab content
         </kol-form-tab>
