--- a/projects/control/src/app/applications/slider/components/slider/slider.component.html
+++ b/projects/control/src/app/applications/slider/components/slider/slider.component.html
@@ -1,4 +1,4 @@
 <div class="slider-component">
-  <img *ngFor="let image of images" [src]="image.src" alt="">
+  <div class="slider-slides" #slidesContainer></div>
   <div class="slider-controls"></div>
 </div>
