--- a/projects/control/src/app/applications/tabbed-form/components/tabbed-form/tabbed-form.component.less
+++ b/projects/control/src/app/applications/tabbed-form/components/tabbed-form/tabbed-form.component.less
@@ -1,6 +1,6 @@
 @tabbed-form-control-panel-width: 280px;
 @tabbed-form-font-family: 'Source Sans Pro', sans-serif;;
-@tabbed-form-control-panel-background-color: #eceff1;
+@tabbed-form-control-panel-background-color: rgba(207, 216, 220, 0.5);
 @tabbed-form-tab-content-background-color: #fafafa;
 
 @tabbed-form-caption-font-size: 18px;
@@ -10,6 +10,7 @@
 
 @tabbed-form-tabs-margin-top: 40px;
 @tabbed-form-tabs-margin-bottom: 40px;
+@tabbed-form-tab-min-height: 64px;
 @tabbed-form-tab-padding: 10px 15px;
 @tabbed-form-tab-background-color: @tabbed-form-tab-content-background-color;
 @tabbed-form-tab-border-radius: 4px;
@@ -61,6 +62,7 @@
         .tabbed-form-tab {
           display: flex;
           flex-direction: row;
+          min-height: @tabbed-form-tab-min-height;
           padding: @tabbed-form-tab-padding;
           background: @tabbed-form-tab-background-color;
           border-top-left-radius: @tabbed-form-tab-border-radius;
