--- a/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.less
+++ b/projects/kolenergo-core/src/lib/ui/components/slider/components/slider/slider.component.less
@@ -33,14 +33,15 @@
       top: 0px;
       right: 0px;
       height: 100%;
-      background-size: cover !important;
+      // background-size: cover !important;
+      // background-position-x: center !important;
+      // background-position-y: top !important;
       background: #edf0f2 fixed;
       -webkit-backface-visibility: hidden;
       -webkit-transform: translateZ(0) scale(1.0, 1.0);
       transform: translateZ(0);
       animation: grow 30s linear 10ms infinite;
       transition:all 0.2s ease-in-out;
-      opacity: 1;
     }
   }
 
