--- a/projects/portal/src/app/portal/components/portal/portal.component.less
+++ b/projects/portal/src/app/portal/components/portal/portal.component.less
@@ -53,9 +53,9 @@ header {
       content:"";
       width:150%;
       height:100%;
-      // position:absolute;
-      // top:0;
-      // left:0;
+      position:absolute;
+      top:0;
+      left:0;
       -webkit-backface-visibility: hidden;
       -webkit-transform: translateZ(0) scale(1.0, 1.0);
       transform: translateZ(0);
@@ -65,6 +65,11 @@ header {
       animation: grow 30s linear 10ms infinite;
       transition:all 0.2s ease-in-out;
       z-index: -2;
+    }
+
+    kol-slider {
+      width: 150%;
+      height: 100%;
     }
 
     .gradient {
