--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -3,8 +3,8 @@
   <header>
     <div class="header-container">
       <!--<div class="background"></div>-->
-      <kol-slider [interval]="5">
-        <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'" [positionY]="'-200px'"></kol-slide>
+      <kol-slider [interval]="20">
+        <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-1.jpg'" [size]="'100%'" [positionY]="'-1000px'"></kol-slide>
         <kol-slide [url]="'http://127.0.0.1:4200/assets/header-bg-7.jpg'" [positionY]="'-500px'"></kol-slide>
       </kol-slider>
       <div class="gradient"></div>
